tests/snapshots/run_wpt_conformance__trtx_sqrt_float32_2D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "sqrt.https.any.js",
    "sqrt float32 2D tensor",
    "trtx",
    "PASS",
)
